--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ body {
 }
 
 .sidebar {
+    border: 2px solid #00FF66;
+    animation: blink 1s infinite;
     flex: 1;
     padding-left: 20px;
 }
@@ -32,7 +34,7 @@ body {
 }
 
 .post-title {
-    
+
     font-size: 1.5em;
     margin-bottom: 10px;
 }
@@ -68,11 +70,11 @@ h1 {
 }
 
 a {
-    color: inherit; 
-    text-decoration: none; 
+    color: inherit;
+    text-decoration: none;
 }
 
 a:hover {
-    color: inherit; 
-    text-decoration: underline; 
+    color: inherit;
+    text-decoration: underline;
 }
