--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,31 @@ h1 {
     margin-bottom: 30px;
 }
 
+h1::before,
+h1::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100px;
+    height: 100%;
+    background-color: #00FFAA;
+    animation: blink 1s infinite;
+}
+
+h1::before {
+    left: -120px;
+}
+
+h1::after {
+    right: -120px;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
 a {
     color: inherit;
     text-decoration: none;
