--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,12 @@ body {
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     font-size: 2.5em;
     margin-bottom: 30px;
 }
 
-h1::before,
-h1::after {
+h1::before{
     content: "";
     position: absolute;
     top: 0;
@@ -82,10 +81,6 @@ h1::after {
 
 h1::before {
     left: -120px;
-}
-
-h1::after {
-    right: -120px;
 }
 
 @keyframes blink {
