--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body {
 
 .sidebar {
     border: 2px solid #00FF66;
-    animation: blink 1s infinite;
     flex: 1;
     padding-left: 20px;
 }
@@ -34,7 +33,6 @@ body {
 }
 
 .post-title {
-
     font-size: 1.5em;
     margin-bottom: 10px;
 }
@@ -67,26 +65,7 @@ h1 {
     text-align: left;
     font-size: 2.5em;
     margin-bottom: 30px;
-}
-
-h1::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 100px;
-    height: 100%;
-    background-color: #00FFAA;
-    animation: blink 1s infinite;
-}
-
-h1::before {
-    left: -120px;
-}
-
-@keyframes blink {
-    50% {
-        opacity: 0;
-    }
+    margin-left: 20px; /* Adjust this value to move h1 to the right */
 }
 
 a {
